:sparkles: Change distribution user get func

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,12 +19,19 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - name: Install latest Skopeo # GitHub's ubuntu 22 uses Skopeo 1.4 but we need 1.14
+      - name: Setup golang
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+      - name: Build latest skopeo
         run: |
-          echo 'deb http://download.opensuse.org/repositories/home:/alvistack/xUbuntu_22.04/ /' | sudo tee /etc/apt/sources.list.d/home:alvistack.list
-          curl -fsSL https://download.opensuse.org/repositories/home:alvistack/xUbuntu_22.04/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/home_alvistack.gpg > /dev/null
-          sudo apt update
-          sudo apt -o Dpkg::Options::="--force-overwrite" install skopeo
+          git clone --depth 1 --branch v1.15.0 https://github.com/containers/skopeo.git
+          cd skopeo
+          DISABLE_CGO=1 make bin/skopeo
+          sudo cp ./bin/skopeo /usr/bin/skopeo
+          cd ..
+          rm -rf skopeo
+          skopeo --version
       - name: Build
         run: |
           IP=`hostname -I | awk '{print $1}'`
