--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -28,22 +28,30 @@ database:
 deploy: single
 
 redis:
-  # redis type available: none, external
+  # redis type available: none, external. Following all of redis config just use reference here.
   # none: means never use redis
   # external: means use the specific redis instance
   type: none
   url: redis://:sigma@localhost:6379/0
 
+badger:
+  # badger is used to implement lock and cache in a single-node mode.
+  enabled: true
+  path: /var/lib/sigma/badger/
+
 cache:
-  # the cache type available is: redis, inmemory, database
-  type: redis
+  # the cache type available is: redis, inmemory, badger
+  # please attention in multi-node mode, you should use redis
+  type: badger
   inmemory:
+    prefix: sigma-cache
     size: 10240
-  ttl: 72h
   redis:
-  database:
-    size: 10240
-    threshold: 0.2
+    prefix: sigma-cache
+    ttl: 72h
+  badger:
+    prefix: sigma-cache
+    ttl: 72h
 
 workqueue:
   # the workqueue type available: redis, kafka, database, inmemory
@@ -56,10 +64,12 @@ workqueue:
     concurrency: 1024
 
 locker:
-  # the locker type available: redis, database
-  type: database
-  database: {}
-  redis: {}
+  # the locker type available: redis, badger
+  type: badger
+  badger:
+    prefix: sigma-locker
+  redis:
+    prefix: sigma-locker
 
 namespace:
   # push image to registry, if namespace not exist, it will be created automatically
