--- a/web/package.json
+++ b/web/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/react": "^1.21.0",
-    "@headlessui/react": "^2.0.1",
+    "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.13",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "bytemd": "^1.21.0",
     "cron-parser": "^4.9.0",
     "csstype": "^3.1.3",
@@ -27,33 +27,34 @@
     "flowbite-react": "^0.9.0",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
-    "monaco-editor": "^0.48.0",
+    "monaco-editor": "^0.49.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
     "xterm": "^5.3.0",
     "xterm-addon-attach": "^0.9.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.1",
-    "json-server": "^1.0.0-alpha.23",
+    "cssnano": "^7.0.2",
+    "json-server": "^1.0.0-beta.1",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
-    "postcss-nesting": "^12.1.2",
-    "tailwindcss": "^3.4.3",
+    "postcss-nesting": "^12.1.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.13"
   },
   "packageManager": "yarn@4.2.1"
 }
