--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -43,6 +43,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Aliyun acr
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -84,6 +91,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
+            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
           tags: |
             type=ref,event=pr
             type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
@@ -131,6 +139,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Aliyun acr
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -172,6 +187,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
+            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
@@ -223,6 +239,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Aliyun acr
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -264,6 +287,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
+            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
@@ -313,6 +337,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Aliyun acr
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -354,6 +385,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
+            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
