--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -43,13 +43,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
-      - name: Login to Aliyun acr
+      - name: Login to tencent tcr
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.TCR_USERNAME }}
+          password: ${{ secrets.TCR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -91,7 +91,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
-            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
+            ccr.ccs.tencentyun.com/go-sigma/sigma
           tags: |
             type=ref,event=pr
             type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
@@ -139,13 +139,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
-      - name: Login to Aliyun acr
+      - name: Login to tencent tcr
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.TCR_USERNAME }}
+          password: ${{ secrets.TCR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -187,7 +187,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
-            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
+            ccr.ccs.tencentyun.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
@@ -239,13 +239,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
-      - name: Login to Aliyun acr
+      - name: Login to tencent tcr
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.TCR_USERNAME }}
+          password: ${{ secrets.TCR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -287,7 +287,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
-            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
+            ccr.ccs.tencentyun.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
@@ -337,13 +337,13 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
-      - name: Login to Aliyun acr
+      - name: Login to tencent tcr
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.TCR_USERNAME }}
+          password: ${{ secrets.TCR_PASSWORD }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -385,7 +385,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
             docker.io/tosone/sigma
-            registry.cn-hangzhou.aliyuncs.com/go-sigma/sigma
+            ccr.ccs.tencentyun.com/go-sigma/sigma
           flavor: |
             latest=false
           tags: |
