--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -59,16 +59,19 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: "1.23"
+          cache: false
       - name: Build latest skopeo
         run: |
-          git clone --depth 1 --branch v1.15.0 https://github.com/containers/skopeo.git
+          git clone --depth 1 --branch v1.16.0 https://github.com/containers/skopeo.git
           cd skopeo
           DISABLE_CGO=1 make bin/skopeo
           sudo cp ./bin/skopeo /usr/bin/skopeo
           cd ..
           rm -rf skopeo
           skopeo --version
+          go clean -cache
+          go clean -modcache
       - name: Save dockerfile to local
         run: |
           make dockerfile-local
@@ -113,7 +116,7 @@ jobs:
           outputs: oci-mediatypes=true,compression=zstd,compression-level=19,force-compression=true,type=image
   image-build-alpine-trivydb:
     name: image-build-alpine-trivydb
-    runs-on: ubuntu-22.04-4core-8g
+    runs-on: ubuntu-22.04
     steps:
       - name: Delete huge unnecessary folders, and clean apt cache
         run: |
@@ -155,16 +158,19 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: "1.23"
+          cache: false
       - name: Build latest skopeo
         run: |
-          git clone --depth 1 --branch v1.15.0 https://github.com/containers/skopeo.git
+          git clone --depth 1 --branch v1.16.0 https://github.com/containers/skopeo.git
           cd skopeo
           DISABLE_CGO=1 make bin/skopeo
           sudo cp ./bin/skopeo /usr/bin/skopeo
           cd ..
           rm -rf skopeo
           skopeo --version
+          go clean -cache
+          go clean -modcache
       - name: Save dockerfile to local
         run: |
           make dockerfile-local
@@ -255,16 +261,19 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: "1.23"
+          cache: false
       - name: Build latest skopeo
         run: |
-          git clone --depth 1 --branch v1.15.0 https://github.com/containers/skopeo.git
+          git clone --depth 1 --branch v1.16.0 https://github.com/containers/skopeo.git
           cd skopeo
           DISABLE_CGO=1 make bin/skopeo
           sudo cp ./bin/skopeo /usr/bin/skopeo
           cd ..
           rm -rf skopeo
           skopeo --version
+          go clean -cache
+          go clean -modcache
       - name: Save dockerfile to local
         run: |
           make dockerfile-local
@@ -311,7 +320,7 @@ jobs:
           outputs: oci-mediatypes=true,compression=zstd,compression-level=19,force-compression=true,type=image
   image-build-debian-trivydb:
     name: image-build-debian-trivydb
-    runs-on: ubuntu-22.04-4core-8g
+    runs-on: ubuntu-22.04
     steps:
       - name: Delete huge unnecessary folders, and clean apt cache
         run: |
@@ -353,16 +362,19 @@ jobs:
       - name: Setup golang
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: "1.23"
+          cache: false
       - name: Build latest skopeo
         run: |
-          git clone --depth 1 --branch v1.15.0 https://github.com/containers/skopeo.git
+          git clone --depth 1 --branch v1.16.0 https://github.com/containers/skopeo.git
           cd skopeo
           DISABLE_CGO=1 make bin/skopeo
           sudo cp ./bin/skopeo /usr/bin/skopeo
           cd ..
           rm -rf skopeo
           skopeo --version
+          go clean -cache
+          go clean -modcache
       - name: Save dockerfile to local
         run: |
           make dockerfile-local
