--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -1,5 +1,5 @@
 style: github
-template: CHANGELOG.tpl.md
+template: CHANGELOG.tpl
 info:
   title: CHANGELOG
   repository_url: https://github.com/go-sigma/sigma
