--- a/deploy/sigma/templates/distribution/deployment.yaml
+++ b/deploy/sigma/templates/distribution/deployment.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
+        rollme: {{ randAlphaNum 5 | quote }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -32,19 +33,22 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - sigma
           args:
             - distribution
+            - --config=/etc/sigma/config.yaml
           ports:
             - name: http
               containerPort: {{ .Values.service.distribution.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: {{ .Values.service.distribution.port }}
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: {{ .Values.service.distribution.port }}
           volumeMounts:
             - name: "config"
@@ -56,7 +60,7 @@ spec:
       volumes:
         - name: "config"
           configMap:
-            name: {{ printf "%s-configmap" .Chart.Name }}
+            name: {{ printf "%s-config" .Chart.Name }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
