--- a/deploy/sigma/values.yaml
+++ b/deploy/sigma/values.yaml
@@ -1,14 +1,9 @@
-# Default values for sigma.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 image:
   repository: ghcr.io/go-sigma/sigma
-  pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: nightly-alpine
+  pullPolicy: IfNotPresent
+  tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
@@ -36,10 +31,7 @@ service:
   worker:
     port: 3001
   distribution:
-    port: 3000
-
-
-
+    port: 3002
 
 ingress:
   enabled: true
@@ -94,9 +86,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
-middleware:
-  type: internal
 
 config:
   log:
@@ -162,8 +151,24 @@ config:
       refreshTtl: 24h
       privateKey: ""
 
+external:
+  redis: {}
+  minio:
+    ak: sigma
+    sk: sigma
+    endpoint: http://127.0.0.1:32000
+    region: cn-north-1
+    bucket: sigma
+    pathStyle: true
+  mysql:
+    host: localhost
+    port: 3306
+    user: root
+    password: password
+    database: sigma
+
 redis:
-  enabled: true # 是否启用Redis部署
+  enabled: true
   auth:
     enabled: true
     password: "sigma"
@@ -174,21 +179,34 @@ redis:
         redis: 6379
   replica:
     replicaCount: 1
-
 minio:
-  enabled: true # 是否启用MinIO部署
-  accessKey: "sigma"
-  secretKey: "sigma-sigma"
+  enabled: true
+  replicas: 4
+  resources: {}
+  mode: distributed
+  statefulset:
+    replicaCount: 4
+    drivesPerNode: 4
+  auth:
+    rootUser: root-sigma
+    rootPassword: root-sigma
   service:
     type: ClusterIP
-    port: 9000
-  buckets:
-    - name: sigma
-      policy: none
-      purge: false
-
+    ports:
+      api: 9000
+      console: 9001
+  provisioning:
+    enabled: true
+    resources: {}
+    buckets:
+      - name: sigma
+        region: cn-north-1
+        withLock: false
+    cleanupAfterFinished:
+      enabled: true
+      seconds: 600
 mysql:
-  enabled: true # 是否启用MySQL部署
+  enabled: true
   auth:
     rootPassword: "sigma"
     createDatabase: true
@@ -200,3 +218,9 @@ mysql:
       type: ClusterIP
       ports:
         mysql: 3306
+nginx-ingress-controller:
+  enabled: true
+  service:
+    type: ClusterIP
+  defaultBackend:
+    enabled: false
