--- a/deploy/sigma/templates/distribution/deployment.yaml
+++ b/deploy/sigma/templates/distribution/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "sigma.distribution.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.autoscaling.replicaCount.distribution }}
   {{- end }}
   selector:
     matchLabels:
@@ -31,7 +31,7 @@ spec:
         - name: {{ printf "%s-distribution" .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
             - sigma
