--- a/deploy/sigma/values.yaml
+++ b/deploy/sigma/values.yaml
@@ -96,24 +96,10 @@ config:
   log:
     level: debug
   database:
-    # The database type to use. Supported types are: sqlite3, mysql, postgresql    # The database type to use. Supported types are: sqlite3, mysql, postgresqll
+    # The database type to use. Supported types are: sqlite3, mysql, postgresql
     type: ""
     # sqlite3, mysql, postgresql
     sqlite3:  {}
-      #path: sigma.db
-    mysql:  {}
-      #host: localhost
-      #port: 3306
-      #user: sigma
-      #password: sigma
-      #dbname: sigma
-    postgresql: {}
-      #host: localhost
-      #port: 5432
-      #user: sigma
-      #password: sigma
-      #dbname: sigma
-      #sslmode: disable
   redis:
     url: ""
     #ex: redis://:sigma@localhost:6789/0
@@ -125,13 +111,6 @@ config:
     type: s3
     filesystem:
       path: /
-    s3: {}
-      #ak: sigma
-      #sk: sigma-sigma
-      #endpoint: http://127.0.0.1:32000
-      #region: cn-north-1
-      #bucket: sigma
-      #forcePathStyle: true
   # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
   proxy:
     enabled: true
